<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activitys.PrincipalActivity"
    tools:showIn="@layout/activity_principal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textViewSaudacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carregando"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewSaldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r_0"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewSaldoGeral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saldo_geral"
            android:textAlignment="center"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <com.prolificinteractive.materialcalendarview.MaterialCalendarView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:mcv_selectionColor="#00F"
        app:mcv_showOtherDates="all"
        app:mcv_tileSize="50dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerMovimentos"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="5dp" />

</LinearLayout>